--- a/LAB_5/LAB_5.runs/impl_1/usage_statistics_webtalk.html
+++ b/LAB_5/LAB_5.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2258646</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Nov 14 14:39:40 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Nov 20 09:50:09 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>062d9754ec6e472da918a5f9c23e46a3</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>6</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>d3ed4791bb4057aa9fd7a72a37a815dc</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>d3ed4791bb4057aa9fd7a72a37a815dc</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -34,82 +34,84 @@
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=4</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
    <TD>basedialog_cancel=9</TD>
-   <TD>basedialog_ok=68</TD>
+   <TD>basedialog_ok=93</TD>
 </TR><TR ALIGN='LEFT'>   <TD>basedialog_yes=1</TD>
    <TD>closeplanner_yes=1</TD>
-   <TD>createsrcfiledialog_file_name=7</TD>
-   <TD>definemodulesdialog_architecture_name=8</TD>
-</TR><TR ALIGN='LEFT'>   <TD>editoroptions_list_of_matches_for_what_you_have=1</TD>
+   <TD>cmdmsgdialog_ok=1</TD>
+   <TD>createsrcfiledialog_file_name=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>definemodulesdialog_architecture_name=9</TD>
+   <TD>editoroptions_list_of_matches_for_what_you_have=1</TD>
    <TD>expreporttreepanel_exp_report_tree_table=3</TD>
-   <TD>filesetpanel_file_set_panel_tree=124</TD>
-   <TD>filesetview_expand_all=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=32</TD>
-   <TD>hcodeeditor_close=5</TD>
-   <TD>hcodeeditor_search_text_combo_box=5</TD>
-   <TD>hinputhandler_toggle_line_comments=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>hpopuptitle_close=2</TD>
+   <TD>filesetpanel_file_set_panel_tree=153</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetview_expand_all=1</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=37</TD>
+   <TD>hcodeeditor_close=8</TD>
+   <TD>hcodeeditor_search_text_combo_box=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hinputhandler_toggle_line_comments=1</TD>
+   <TD>hpopuptitle_close=2</TD>
    <TD>mainmenumgr_edit=2</TD>
-   <TD>mainmenumgr_file=4</TD>
-   <TD>mainmenumgr_project=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainwinmenumgr_layout=2</TD>
+   <TD>mainmenumgr_file=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_open_recent_project=1</TD>
+   <TD>mainmenumgr_project=4</TD>
+   <TD>mainwinmenumgr_layout=2</TD>
    <TD>msgtreepanel_message_view_tree=57</TD>
-   <TD>msgview_critical_warnings=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_critical_warnings=2</TD>
    <TD>msgview_error_messages=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_filter_messages=1</TD>
+   <TD>msgview_filter_messages=1</TD>
    <TD>msgview_information_messages=2</TD>
-   <TD>msgview_show_only_unsuppressed_messages=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgview_show_only_unsuppressed_messages=1</TD>
    <TD>msgview_show_suppressed_and_unsuppressed_messages=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgview_status_messages=2</TD>
+   <TD>msgview_status_messages=2</TD>
    <TD>optionsview_close=1</TD>
-   <TD>pacommandnames_add_sources=8</TD>
-   <TD>pacommandnames_auto_connect_target=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=11</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=9</TD>
+   <TD>pacommandnames_auto_connect_target=4</TD>
+   <TD>pacommandnames_auto_update_hier=13</TD>
    <TD>pacommandnames_goto_netlist_design=1</TD>
-   <TD>pacommandnames_log_window=1</TD>
-   <TD>pacommandnames_open_hardware_manager=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_project=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_log_window=1</TD>
+   <TD>pacommandnames_open_hardware_manager=4</TD>
+   <TD>pacommandnames_open_project=1</TD>
    <TD>pacommandnames_reports_window=1</TD>
-   <TD>pacommandnames_run_bitgen=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_run_bitgen=6</TD>
    <TD>pacommandnames_run_implementation=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_set_as_top=1</TD>
+   <TD>pacommandnames_set_as_top=1</TD>
    <TD>pacommandnames_simulation_live_run=10</TD>
-   <TD>pacommandnames_simulation_relaunch=2</TD>
-   <TD>pacommandnames_simulation_reset=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_run=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_relaunch=2</TD>
+   <TD>pacommandnames_simulation_reset=3</TD>
+   <TD>pacommandnames_simulation_run=3</TD>
    <TD>pacommandnames_simulation_run_behavioral=5</TD>
-   <TD>pacommandnames_toggle_view_nav=5</TD>
-   <TD>paviews_code=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_flow_navigator=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_toggle_view_nav=5</TD>
+   <TD>paviews_code=17</TD>
+   <TD>paviews_flow_navigator=3</TD>
    <TD>paviews_par_report=1</TD>
-   <TD>planaheadtab_show_flow_navigator=4</TD>
-   <TD>programdebugtab_open_target=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=2</TD>
-   <TD>programfpgadialog_program=2</TD>
-   <TD>rdicommands_delete=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>planaheadtab_show_flow_navigator=4</TD>
+   <TD>programdebugtab_open_target=5</TD>
+   <TD>programdebugtab_program_device=6</TD>
+   <TD>programfpgadialog_program=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=3</TD>
    <TD>rdicommands_line_comment=11</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdiviews_waveform_viewer=14</TD>
+   <TD>rdiviews_waveform_viewer=14</TD>
    <TD>saveprojectutils_save=2</TD>
-   <TD>simulationforcesettingsdialog_force_value=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationforcesettingsdialog_force_value=2</TD>
    <TD>simulationforcesettingsdialog_value_radix=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=2</TD>
-   <TD>srcchooserpanel_create_file=7</TD>
-   <TD>srcmenu_ip_hierarchy=10</TD>
-   <TD>syntheticagettingstartedview_recent_projects=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=3</TD>
-   <TD>taskbanner_close=7</TD>
-   <TD>waveformnametree_waveform_name_tree=4</TD>
+   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=2</TD>
+   <TD>srcchooserpanel_create_file=8</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=11</TD>
+   <TD>syntheticagettingstartedview_recent_projects=6</TD>
+   <TD>syntheticastatemonitor_cancel=3</TD>
+   <TD>taskbanner_close=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>waveformnametree_waveform_name_tree=4</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=8</TD>
-   <TD>autoconnecttarget=2</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=9</TD>
+   <TD>autoconnecttarget=5</TD>
    <TD>editdelete=3</TD>
-   <TD>launchprogramfpga=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=2</TD>
+   <TD>launchprogramfpga=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=5</TD>
    <TD>openproject=1</TD>
-   <TD>runbitgen=3</TD>
-   <TD>runimplementation=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=17</TD>
+   <TD>runbitgen=6</TD>
+   <TD>runimplementation=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=20</TD>
    <TD>savefileproxyhandler=3</TD>
    <TD>settopnode=1</TD>
    <TD>showview=3</TD>
@@ -117,12 +119,12 @@
    <TD>simulationrun=5</TD>
    <TD>simulationrunfortime=10</TD>
    <TD>toggleviewnavigator=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskimplementation=2</TD>
    <TD>viewtaskrtlanalysis=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=5</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=7</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -165,15 +167,16 @@
     <TD>carry4=19</TD>
     <TD>fdce=137</TD>
     <TD>fdpe=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre=3</TD>
+    <TD>gnd=9</TD>
     <TD>ibuf=5</TD>
-    <TD>lut1=5</TD>
-    <TD>lut2=34</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=31</TD>
-    <TD>lut4=39</TD>
-    <TD>lut5=50</TD>
-    <TD>lut6=61</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf=3</TD>
+    <TD>lut1=6</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=34</TD>
+    <TD>lut3=28</TD>
+    <TD>lut4=45</TD>
+    <TD>lut5=59</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut6=61</TD>
+    <TD>obuf=6</TD>
     <TD>vcc=9</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -184,15 +187,16 @@
     <TD>carry4=19</TD>
     <TD>fdce=137</TD>
     <TD>fdpe=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre=3</TD>
+    <TD>gnd=9</TD>
     <TD>ibuf=5</TD>
-    <TD>lut1=5</TD>
-    <TD>lut2=34</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=31</TD>
-    <TD>lut4=39</TD>
-    <TD>lut5=50</TD>
-    <TD>lut6=61</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf=3</TD>
+    <TD>lut1=6</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=34</TD>
+    <TD>lut3=28</TD>
+    <TD>lut4=45</TD>
+    <TD>lut5=59</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut6=61</TD>
+    <TD>obuf=6</TD>
     <TD>vcc=9</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -339,22 +343,24 @@
     <TD>fdce_used=137</TD>
     <TD>fdpe_functional_category=Flop &amp; Latch</TD>
     <TD>fdpe_used=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
+    <TD>fdre_used=3</TD>
+    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=5</TD>
-    <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=5</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
+    <TD>lut1_used=6</TD>
+    <TD>lut2_functional_category=LUT</TD>
     <TD>lut2_used=34</TD>
-    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=31</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=42</TD>
-    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=53</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6_functional_category=LUT</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
+    <TD>lut3_used=28</TD>
+    <TD>lut4_functional_category=LUT</TD>
+    <TD>lut4_used=48</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
+    <TD>lut5_used=62</TD>
+    <TD>lut6_functional_category=LUT</TD>
     <TD>lut6_used=55</TD>
-    <TD>obuf_functional_category=IO</TD>
-    <TD>obuf_used=3</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
+    <TD>obuf_used=6</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -370,36 +376,36 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=53200</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=180</TD>
-    <TD>lut_as_logic_util_percentage=0.34</TD>
+    <TD>lut_as_logic_used=191</TD>
+    <TD>lut_as_logic_util_percentage=0.36</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=17400</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=106400</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=141</TD>
-    <TD>register_as_flip_flop_util_percentage=0.13</TD>
+    <TD>register_as_flip_flop_used=144</TD>
+    <TD>register_as_flip_flop_util_percentage=0.14</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=106400</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=53200</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=180</TD>
-    <TD>slice_luts_util_percentage=0.34</TD>
+    <TD>slice_luts_used=191</TD>
+    <TD>slice_luts_util_percentage=0.36</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=106400</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=141</TD>
-    <TD>slice_registers_util_percentage=0.13</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=0.13</TD>
+    <TD>slice_registers_used=144</TD>
+    <TD>slice_registers_util_percentage=0.14</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=0.14</TD>
     <TD>fully_used_lut_ff_pairs_used=14</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=53200</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=180</TD>
-    <TD>lut_as_logic_util_percentage=0.34</TD>
+    <TD>lut_as_logic_used=191</TD>
+    <TD>lut_as_logic_util_percentage=0.36</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=17400</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
@@ -407,28 +413,28 @@
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=110</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=110</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=107</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=107</TD>
     <TD>lut_ff_pairs_with_one_unused_lut_output_used=105</TD>
     <TD>lut_flip_flop_pairs_available=53200</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=125</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=123</TD>
     <TD>lut_flip_flop_pairs_util_percentage=0.23</TD>
     <TD>slice_available=13300</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=65</TD>
-    <TD>slice_util_percentage=0.49</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=69</TD>
+    <TD>slice_util_percentage=0.52</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=50</TD>
+    <TD>slicel_used=43</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=15</TD>
-    <TD>unique_control_sets_used=12</TD>
-    <TD>using_o5_and_o6_fixed=12</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=40</TD>
-    <TD>using_o5_output_only_fixed=40</TD>
+    <TD>slicem_used=26</TD>
+    <TD>unique_control_sets_used=13</TD>
+    <TD>using_o5_and_o6_fixed=13</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=42</TD>
+    <TD>using_o5_output_only_fixed=42</TD>
     <TD>using_o5_output_only_used=0</TD>
     <TD>using_o6_output_only_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=140</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=149</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -474,25 +480,25 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=493558</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=491899</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufg=0</TD>
     <TD>bufr=0</TD>
     <TD>congestion_level=0</TD>
-    <TD>ctrls=12</TD>
+    <TD>ctrls=13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>dsp=0</TD>
     <TD>effort=2</TD>
-    <TD>estimated_expansions=194820</TD>
-    <TD>ff=141</TD>
+    <TD>estimated_expansions=207468</TD>
+    <TD>ff=144</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=2</TD>
     <TD>high_fanout_nets=0</TD>
-    <TD>iob=8</TD>
-    <TD>lut=194</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=407</TD>
-    <TD>nets=456</TD>
-    <TD>pins=2233</TD>
+    <TD>iob=11</TD>
+    <TD>lut=207</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=427</TD>
+    <TD>nets=476</TD>
+    <TD>pins=2329</TD>
     <TD>pll=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_runtime=0.000000</TD>
     <TD>router_timing_driven=1</TD>
@@ -545,10 +551,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:38s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:36s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=550.129MB</TD>
-    <TD>memory_peak=773.602MB</TD>
+    <TD>memory_gain=548.457MB</TD>
+    <TD>memory_peak=772.188MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
